# SimpleMazeMDP

./: .gitignore  pyproject.toml  setup.cfg
src/mazemdp/: maze.py  mdp.py
src/tabularmazemdp/: maze.py  mdp.py
tests/: test_mdp.py
